compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_to_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : ^"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of pointer to <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
