compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_valid_extended_opts.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var i : int\nvar n : nat\nvar r : real\n\nput i : 0 : 0 : 0\nput n : 0 : 0 : 0\nput r : 0 : 0 : 0\n"
---
"i"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"n"@"src/main.t:16..17" [ConstVar(Var, No)]: nat
"r"@"src/main.t:28..29" [ConstVar(Var, No)]: real
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
