compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_in_function.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "fcn oeuf : int result 0 end oeuf"
---
"oeuf"@"src/main.t:4..8" [Subprogram(Function)]: function -> int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
