compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_return_stmt_in_procedure.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: proc q return end q
---
"q"@"src/main.t:5..6" [Subprogram(Procedure)]: procedure -> void
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
