compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all_err_extra_args_between.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar b : boolean\nvar _ := s(b, b, all, b, b)\n"
---
"s"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 9..23) [Set]: <error>
"b"@(FileId(1), 28..29) [ConstVar(Var, No)]: boolean
"_"@(FileId(1), 44..45) [ConstVar(Var, No)]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 49..50: constructor call has extra arguments
| error in file FileId(1) for 49..50: call has extra arguments
| note in file FileId(1) for 57..60: this `all` also covers the rest of the arguments
