compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_normal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar _ := s(true, false, true, false)\n"
---
"s"@"src/main.t:5..6" [Type]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"s"@"src/main.t:9..23" [Set]: <error>
"_"@"src/main.t:28..29" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
