compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_ty_from_type_alias.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type s : set of boolean var _ : s"
---
"s"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 9..23) [Set]: <error>
"_"@(FileId(1), 28..29) [ConstVar(Var, No)]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

